FEAT: adjust data contraint and UI